--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Rubik+Moonrocks&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
     <title>Anaessen</title> 
 </head>
 <body>
@@ -12,8 +18,8 @@
         <div class="container-nav">
             <img class="logo" src="img/logo.png" alt="logo">
             <nav>
-                <a href="#" class="item">Productos</a></li>
-                <a href="#" class="item">Recetas</a></li>
+                <a href="#productos" class="item">Productos</a></li>
+                <a href="#recetas" class="item">Recetas</a></li>
                 <a href="#" class="item">Caracteristicas</a></li>
             </nav>
         </div>
@@ -31,10 +37,47 @@
             <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
             <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
             <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
+            <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
+            <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
+            <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
+            <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
+            <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
+            <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
+            <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
+            <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
+            <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
+            <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
+            <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
+            <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
+            <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
+            <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
+            <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
+            <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
+            <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
+            <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
+            <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
+            <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
+            <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
+            <img class="grid-item" src="img/marsalacacerola24cm.jpg" alt="">
+            <img class="grid-item" src="img/aquacacerolaconmango18cm.jpg" alt="">
+            <img class="grid-item" src="img/Sartén aqua.jpg" alt="">
         </div>
     </section>
-    <section class="recetas">
+    <section id="recetas">
         <h2>Recetas con essen:</h2>
+    </section>
+    <section class="">
+        <div class="recetas-contenedor">
+            <img src="img/124156398_3312588278818823_4809473721185295316_n.png" alt="">
+            <img src="img/Bizcochuelo4024_00072OKOK.jpg" alt="">
+            <img src="img/124156398_3312588278818823_4809473721185295316_n.png" alt="">
+            <img src="img/Bizcochuelo4024_00072OKOK.jpg" alt="">
+            <img src="img/124156398_3312588278818823_4809473721185295316_n.png" alt="">
+            <img src="img/Bizcochuelo4024_00072OKOK.jpg" alt="">
+            <img src="img/124156398_3312588278818823_4809473721185295316_n.png" alt="">
+            <img src="img/Bizcochuelo4024_00072OKOK.jpg" alt="">
+            <img src="img/Bizcochuelo4024_00072OKOK.jpg" alt="">
+        </div>
     </section>
 </body>
 </html>
