--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
         <div class="contenedor-projects" id="Proyectos">
             <div class="galeria">
                 <div class="info">
-                    <img src="../img/formulario.png" alt="" class="proyec">
-                    <p class="descripcion">Formulario</p>
+                    <img src="../img/cifrador.png" alt="" class="proyec">
+                    <p class="descripcion">Cifrador Cesar</p>
                 </div> 
                 <div class="info">
                     <img src="../img/apipeliculas.png" alt="" class="proyec">
